add send message to topic

--- a/topic-subscription-connection/src/main/resources/bus-topsub.properties
+++ b/topic-subscription-connection/src/main/resources/bus-topsub.properties
@@ -1,4 +1,4 @@
-servicebus.connection-string=Endpoint=sb://bus-vnhguyen.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=FDVhjeUvdQ0jgMaR8dQA3LaTKbnnedNIOOHejqFtYmI=
+servicebus.connection-string=Endpoint=sb://dev-membership-promotions.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=tSby3sFEqTwbosLrr4Bti7Emq1qALlTbtOtl+jAL3vY=
 servicebus.subscription-receive-mode=peeklock
 
 servicebus.topic1=topic-movie
